*: always use -fno-rtti and -L4_DNO_RTTI together
If passing -fno-rtti to the compiler, do also pass -DL4_NO_RTTI.

Change-Id: I62a97bef25260885b78edf809c428c2a1164f30d

--- a/l4re_vfs/lib/src/Makefile
+++ b/l4re_vfs/lib/src/Makefile
@@ -11,5 +11,5 @@ include $(L4DIR)/mk/lib.mk
 CFLAGS   += -fvisibility=hidden
 CXXFLAGS += -fvisibility=hidden
 # No exception information as unwinder code might use malloc and friends
-DEFINES += -DNOT_IN_libc
+DEFINES += -DNOT_IN_libc -DL4_NO_RTTI
 CXXFLAGS += -include libc-symbols.h -fno-exceptions -fno-rtti
