libc_backends/l4re_vfs: proper symbol defining in backends
Addendum to I3d6439261d4fa17ce4365de37366e882fc9d4dce.

gcc may define _FILE_OFFSET_BITS=64 on 32-bit platforms (for example
recent gcc compilers compiled for Debian). This disrupts the symbol
definitions like mmap64/mmap and off_t (either 32-bit or 64-bit).
Actually we need to define _LIBC for LIBC-related code, hence, include
uclibc/libc-symbols.h.

Change-Id: I88b2095c9f900de098031612a542a0ac8472a969

--- a/l4re_vfs/lib/src/Makefile
+++ b/l4re_vfs/lib/src/Makefile
@@ -11,4 +11,5 @@ include $(L4DIR)/mk/lib.mk
 CFLAGS   += -fvisibility=hidden
 CXXFLAGS += -fvisibility=hidden
 # No exception information as unwinder code might use malloc and friends
-CXXFLAGS += -fno-exceptions -fno-rtti
+DEFINES += -DNOT_IN_libc
+CXXFLAGS += -include libc-symbols.h -fno-exceptions -fno-rtti
