libc-headers: Have deps for all installed headers
In case the header install is interruped (for example, by pressing
Ctrl-C in a wrong moment), not all headers are installed, however, the
all prerequisites are fulfilled for the following make call, never fully
installing all remaining headers. Now check that all targets are there
such that those are installed.

Change-Id: Iccf43b4e69e574f7e550eaabaea5684f4c5b2cc4

--- a/uclibc-headers/Makefile
+++ b/uclibc-headers/Makefile
@@ -30,9 +30,9 @@ vpath %.h $(CONTRIB_DIR)/libc/sysdeps/linux/$(UCLIBC_ARCH)
 vpath %.h $(CONTRIB_DIR)/libc/sysdeps/linux/common
 vpath %.h $(CONTRIB_DIR)/include
 
-all:: $(HEADERS_LST)
-
 DST_HEADERS   := $(addprefix $(HEADER_DIR)/,$(DST_HEADERS))
+
+all:: $(HEADERS_LST) $(DST_HEADERS)
 
 $(DST_HEADERS): $(HEADER_DIR)/%: % FORCE $(HEADERS_LST) \
                                          $(LIBCSRC_DIR)/make_vars.mk
