libc: Provide a librt
Provide an empty librt for programs that need it for successful linking.

Change-Id: I72bd987ada6eb9b07775680c585210c71378ad01

--- a/uclibc/lib/Makefile
+++ b/uclibc/lib/Makefile
@@ -1,7 +1,7 @@
 PKGDIR	?= ..
 L4DIR	?= $(PKGDIR)/../../..
 
-TARGET = uclibc libpthread minimal_l4re
+TARGET = uclibc libpthread minimal_l4re librt
 
 include $(L4DIR)/mk/subdir.mk
 
