libc_be_minimal_log_io: move object code to libc_minimal_l4re
This backend provides some minimal write() implementation that only
work for stdout/stderr. It is used by applications in conjunction with
uclibc_minimal.

Change-Id: I4eb7d5adc1c350b3acc12d1233920eedcbca77f7

--- a/l4re_itas/Control
+++ b/l4re_itas/Control
@@ -1,3 +1,2 @@
-requires: libc_minimal libsupc++_minimal libloader libc_be_minimal_log_io 
-          libc_minimal_l4re
+requires: libc_minimal libsupc++_minimal libloader libc_minimal_l4re
 maintainer: warg@os.inf.tu-dresden.de
