--- a/libc_backends/lib/minimal_io/Makefile
+++ b/libc_backends/lib/minimal_io/Makefile
@@ -1,9 +1,9 @@
 PKGDIR ?= ../..
 L4DIR  ?= $(PKGDIR)/../../..
 
-TARGET      = libc_be_minimal_log_io.a
+TARGET      = libc_be_minimal_log_io.ofl
 PC_FILENAME = libc_be_minimal_log_io
-PC_EXTRA    = Link_Libs= %{static|static-pie:-lc_be_minimal_log_io}
+PC_LIBS     = %{-link-libc:%{shared:;:libc_be_minimal_log_io.ofl}}
 SRC_CC      = be.cc
 CXXFLAGS    = -DNOT_IN_libc -include libc-symbols.h -DL4_NO_RTTI -fno-rtti -fno-exceptions
 
