--- a/moe/Control
+++ b/moe/Control
@@ -1,3 +1,3 @@
 requires: libc_minimal libc_minimal_l4re libsupc++_minimal libsigma0 libloader
-          libkproxy libc_be_minimal_log_io
+          libkproxy
 maintainer: adam@os.inf.tu-dresden.de warg@os.inf.tu-dresden.de
