--- a/moe/server/src/Makefile
+++ b/moe/server/src/Makefile
@@ -27,7 +27,7 @@ BID_CAN_PIE      = $(CAN_PIE_$(ARCH))
 
 REQUIRES_LIBS  := libkproxy libloader l4re-util libsigma0 \
                   cxx_io cxx_libc_io libc_be_minimal_log_io libsupc++_minimal \
-		  l4sys
+                  libc_minimal libc_minimal_l4re
 DEFINES        += -DL4_CXX_NO_EXCEPTION_BACKTRACE -DL4_MINIMAL_LIBC
 LDFLAGS        += --entry=_real_start
 
