--- a/cxx_libc_io/Control
+++ b/cxx_libc_io/Control
@@ -1,3 +1,3 @@
-requires: cxx_io libc-headers libstdc++-headers
+requires: cxx_io libc-headers
 provides: cxx_libc_io
 Maintainer: warg@os.inf.tu-dresden.de
