[API] cxx: remove iostream dependency
The cxx library is used in parts of the L4Re libc implementation. As
such, it should not rely on libstdc++ functionality.

Requires-Change-Id: Icabf6654745f01fc8ce56719e89cb6a7fe585055
Change-Id: I2ea629f3b4932255d23e59544348249abfe9d3de

--- a/cxx/lib/base/include/Makefile
+++ b/cxx/lib/base/include/Makefile
@@ -1,5 +1,5 @@
 PKGDIR	= ../../..
 L4DIR	?= $(PKGDIR)/../../..
-EXTRA_TARGET := exceptions string std_exc_io
+EXTRA_TARGET := exceptions string
 
 include $(L4DIR)/mk/include.mk
