libc_backends: move most backends into libc
Change-Id: I06d6e27e3a5b329b1ffc8de3f3ec7a4775a8ead2

--- a/libc_backends/lib/fs_noop/Makefile
+++ b/libc_backends/lib/fs_noop/Makefile
@@ -1,9 +1,10 @@
 PKGDIR  ?= ../..
 L4DIR   ?= $(PKGDIR)/../../..
 
-TARGET      = libc_be_fs_noop.a libc_be_fs_noop.so
+TARGET      = libc_be_fs_noop.ofl libc_be_fs_noop.p.a
 PC_FILENAME = libc_be_fs_noop
-PC_EXTRA    = Link_Libs= %{static|static-pie:-lc_be_fs_noop}
+PC_LIBS       = %{-link-libc:%{shared:--whole-archive -lc_be_fs_noop.p --no-whole-archive;:libc_be_fs_noop.ofl}}
+PC_LIBS_PIC   =
 SRC_C       = fs.c
 CFLAGS      = -DNOT_IN_libc -include libc-symbols.h
 
