--- a/libc_backends/lib/l4re_file/Makefile
+++ b/libc_backends/lib/l4re_file/Makefile
@@ -1,11 +1,11 @@
 PKGDIR  ?= ../..
 L4DIR   ?= $(PKGDIR)/../../..
 
-TARGET         = libc_be_l4refile.a libc_be_l4refile.so
+TARGET         = libc_be_l4refile.ofl libc_be_l4refile.p.a
 REQUIRES_LIBS  = l4re
 PC_FILENAME    = libc_be_l4refile
-PC_LIBS        = -lc_be_l4refile
-PC_EXTRA       = Link_Libs= %{static|static-pie:-lc_be_l4refile}
+PC_LIBS        = %{-link-libc:%{shared:--whole-archive -lc_be_l4refile.p --no-whole-archive;:libc_be_l4refile.ofl}}
+PC_LIBS_PIC    =
 SRC_CC         = file.cc mmap.cc mount.cc socket.cc
 # No exception information as unwinder code might uses malloc and friends
 CXXFLAGS       := -DL4_NO_RTTI -fno-rtti -fno-exceptions \
