--- a/uclibc/Control
+++ b/uclibc/Control
@@ -1,4 +1,6 @@
 Provides: libc libpthread libc_minimal_l4re
 requires: l4sys l4re l4re-util l4re_c l4re_c-util ldscripts compiler-rt
-          libc_be_minimal_log_io
+          libc_be_minimal_log_io libc_be_l4re libc_be_l4refile
+          libc_support_misc libc_be_fs_noop libc_be_sem_noop libc_be_sig
+          libc_be_socket_noop
 Maintainer: adam@os.inf.tu-dresden.de
