--- a/libc_backends/lib/l4re/lib/Makefile
+++ b/libc_backends/lib/l4re/lib/Makefile
@@ -1,10 +1,10 @@
 PKGDIR ?= ../../..
 L4DIR  ?= $(PKGDIR)/../../..
 
-TARGET        = libc_be_l4re.a libc_be_l4re.so
+TARGET        = libc_be_l4re.ofl libc_be_l4re.p.a
 PC_FILENAME   = libc_be_l4re
-PC_EXTRA     := Link_Libs= %{static|static-pie:-lc_be_l4re -l4re}
-PC_LIBS      := -lc_be_l4re
+PC_LIBS       = %{-link-libc:%{shared:--whole-archive -lc_be_l4re.p --no-whole-archive;:libc_be_l4re.ofl}}
+PC_LIBS_PIC   =
 SRC_C         = nanosleep.c sched_yield.c usleep.c \
                 gettimeofday.c clock_gettime.c clock.c \
                 clock_settime.c settimeofday.c time.c \
