sigma0/Control: Make l4sys-direct direct dependency explicit
Change-Id: I4da0f7df8d7611bb97fccec66175ded84b7cc38c

--- a/sigma0/Control
+++ b/sigma0/Control
@@ -1,2 +1,2 @@
-requires: libc_minimal crtn l4sys l4util libsigma0 cxx_io
+requires: libc_minimal crtn l4sys l4util libsigma0 cxx_io l4sys-direct
 Maintainer: warg@os.inf.tu-dresden.de
