--- a/l4sys/Control
+++ b/l4sys/Control
@@ -1,3 +1,3 @@
-provides: l4sys l4sys-l4x
+provides: l4sys l4sys-l4x l4sys-direct
 requires: ldscripts compiler-rt-pure
 Maintainer: adam@os.inf.tu-dresden.de warg@os.inf.tu-dresden.de
