l4re: move l4re and l4re-util object code to libc
This includes the C-API too.

Change-Id: I8de3ff69a18fae2c95e52ef08f31549b77d1d75c

--- a/ned/Control
+++ b/ned/Control
@@ -1,4 +1,4 @@
-requires: stdlibs libc libsupc++ libloader l4re-util lua++
+requires: stdlibs libc libsupc++ libloader lua++
 optional: readline
 provides: ned
 maintainer: warg@os.inf.tu-dresden.de
