--- a/l4re/util/libs/Makefile
+++ b/l4re/util/libs/Makefile
@@ -1,10 +1,11 @@
 PKGDIR?= ../..
 L4DIR ?= $(PKGDIR)/../../..
 
-TARGET	       = lib4re-util.a lib4re-util.so
+TARGET	       = lib4re-util.ofl lib4re-util.p.a
 SRC_CC        := cap_alloc.cc debug.cc kumem_alloc.cc
 PC_FILENAME   := l4re-util
-REQUIRES_LIBS := l4re
+PC_LIBS       := %{-link-libc:%{shared:--whole-archive -l4re-util.p --no-whole-archive;:lib4re-util.ofl}}
+PC_LIBS_PIC   :=
 
 PICFLAGS += -DSHARED=1
 CXXFLAGS += -DL4_NO_RTTI -fno-rtti -fno-exceptions
