--- a/l4re_c/lib/src/Makefile
+++ b/l4re_c/lib/src/Makefile
@@ -1,8 +1,10 @@
 PKGDIR?= ../..
 L4DIR ?= $(PKGDIR)/../../..
 
-TARGET	      = lib4re-c.a lib4re-c.so
-REQUIRES_LIBS = l4re
+TARGET	      = lib4re-c.ofl lib4re-c.p.a
+PC_LIBS       = %{-link-libc:%{shared:--whole-archive -l4re-c.p --no-whole-archive;:lib4re-c.ofl}}
+PC_LIBS_PIC   =
+
 SRC_CC := namespace.cc \
           rm.cc \
           mem_alloc.cc \
