--- a/moe/server/src/Makefile
+++ b/moe/server/src/Makefile
@@ -25,7 +25,7 @@ CAN_PIE_arm     := y
 CAN_PIE_arm64   := y
 BID_CAN_PIE      = $(CAN_PIE_$(ARCH))
 
-REQUIRES_LIBS  := libkproxy libloader l4re-util libsigma0 \
+REQUIRES_LIBS  := libkproxy libloader libsigma0 \
                   cxx_io cxx_libc_io libc_be_minimal_log_io libsupc++_minimal \
                   libc_minimal libc_minimal_l4re
 DEFINES        += -DL4_CXX_NO_EXCEPTION_BACKTRACE -DL4_MINIMAL_LIBC
