--- a/uclibc/Control
+++ b/uclibc/Control
@@ -1,3 +1,3 @@
 Provides: libc libpthread libc_minimal_l4re
-requires: l4sys l4re ldscripts compiler-rt
+requires: l4sys l4re l4re-util l4re_c l4re_c-util ldscripts compiler-rt
 Maintainer: adam@os.inf.tu-dresden.de
