l4re_vfs: move object code into libc/ld.so
The minimal_libc_l4re variant never used use VFS so it's not applicable
there.

Requires-Change-Id: I5d3961f073acea7826dcc76293368727739d0c52
Change-Id: I3ec2781b29bd55bc024d634dbfba635f5438c31b

--- a/l4re_vfs/lib/src/Makefile
+++ b/l4re_vfs/lib/src/Makefile
@@ -3,6 +3,7 @@ L4DIR     ?= $(PKGDIR)/../../..
 
 PC_FILENAME = libl4re-vfs
 TARGET	    = libl4re-vfs.o.a
+PC_LIBS     = %{-link-libc:%{shared:;:libl4re-vfs.o.a}}
 SRC_CC	    = vfs.cc
 REQUIRES_LIBS = l4re-util
 
