uclibc: make sure we do not rely on RTTI
Inside of uclibc we must not use RTTI. Add the respective define for
the L4 headers.

Change-Id: I8ddbd9396ca6e8ee50bca7cb611e888804889068

--- a/uclibc/lib/minimal_l4re/Makefile
+++ b/uclibc/lib/minimal_l4re/Makefile
@@ -8,7 +8,7 @@ define PC_EXTRA
 Link_Libs= %{static|static-pie:-lc_minimal_l4re}
 endef
 
-DEFINES         := -DL4_MINIMAL_LIBC
+DEFINES         := -DL4_MINIMAL_LIBC -DL4_NO_RTTI=1
 SRC_CC          := _exit.cc
 
 vpath _exit.cc $(SRC_DIR)/../uclibc
