libc_backends: just depend on libc-headers
To compile the backends, only the libc headers are required. Because
the object code of the backends will be moved into libc, the plain libc
dependency would be cyclic.

Change-Id: I0bcb0247e7c8aada333fec6cec1a6eb60a2dcf7f

--- a/libc_backends/Control
+++ b/libc_backends/Control
@@ -2,5 +2,5 @@ Provides: libc_be_socket_noop libc_be_l4re libc_support_misc
           libc_be_fs_noop libc_be_math libc_be_l4refile libinitcwd
           libc_be_minimal_log_io libmount libc_be_sig
           libc_be_sem_noop libc_be_static_heap
-Requires: l4re libl4re-vfs libc
+Requires: l4re libl4re-vfs libc-headers
 Maintainer: adam@os.inf.tu-dresden.de
