l4re_c: compile without exceptions
When we move the object code to libc, exceptions cannot be used
internally because it is unclear if the application links the C++
support library.

Change-Id: If23b72b2da3bc6f954a410f6eb420ffdbac1576a

--- a/l4re_c/util/lib/Makefile
+++ b/l4re_c/util/lib/Makefile
@@ -6,4 +6,6 @@ SRC_CC       := cap_alloc.cc video/goos_fb.cc kumem_alloc.cc
 PC_FILENAME   = l4re_c-util
 REQUIRES_LIBS = l4re_c l4re-util
 
+CXXFLAGS += -DL4_NO_RTTI -fno-rtti -fno-exceptions
+
 include $(L4DIR)/mk/lib.mk
