--- a/l4re_c/lib/src/Makefile
+++ b/l4re_c/lib/src/Makefile
@@ -18,4 +18,6 @@ SRC_CC := namespace.cc \
           dma_space.cc \
           parent.cc
 
+CXXFLAGS += -DL4_NO_RTTI -fno-rtti -fno-exceptions
+
 include $(L4DIR)/mk/lib.mk
