libc_backends: provide a single POSIX signal backend
Now that POSIX signals are implemented in ITAS for a large part, we can
properly support most in-application signals.

Requires-Change-Id: I13bc690d6b6e15f6be1a9f82103eb107d9d26969
Change-Id: If672caa49be36630232bf6583cb7be32e06ac433

--- a/lua/examples/interpr/Makefile
+++ b/lua/examples/interpr/Makefile
@@ -3,7 +3,7 @@ L4DIR   ?= $(PKGDIR)/../../..
 
 TARGET        = lua
 SRC_C         = lua.c
-REQUIRES_LIBS = lua libc_support_misc libc_be_fs_noop libc_be_sig_noop
+REQUIRES_LIBS = lua libc_support_misc libc_be_fs_noop libc_be_sig
 
 vpath %.c $(PKGDIR)/lib/contrib/src
 
