--- a/libc_backends/lib/sig/Makefile
+++ b/libc_backends/lib/sig/Makefile
@@ -1,8 +1,9 @@
 PKGDIR  ?= ../..
 L4DIR   ?= $(PKGDIR)/../../..
 
-TARGET   = include lib
+TARGET      = libc_be_sig.a libc_be_sig.so
+PC_FILENAME = libc_be_sig
+SRC_CC      = sig.cc
+CXXFLAGS    = -fno-exceptions
 
-include $(L4DIR)/mk/subdir.mk
-
-lib: include
+include $(L4DIR)/mk/lib.mk
