Makefile: use abspath directly
absfilename used to implement functionality now natively available
in make as abspath. Use the make functionality to be able to
deprecate the custom function.

Change-Id: Idf651ece33c9c25e94a2fb30a5bbc47c507e5500

--- a/libstdc++-headers/include-std/Makefile
+++ b/libstdc++-headers/include-std/Makefile
@@ -45,7 +45,7 @@ SRCDIR_X         = $(STDCXX_CONTRIB_DIR)
 CTYPE_HEADERS := $(filter-out %/os_defines.h,$(wildcard $(SRCDIR_X)/config/os/generic/*))
 BACKWARD_HEADERS := $(filter-out %.h,$(wildcard $(SRCDIR_X)/include/backward/*))
 
-install_header_x = $(MKDIR) $(dir $(INSTALL_INCDIR_X)/$(strip $(2))) && $(LN) -sf $(call absfilename,$(strip $(1)) $(INSTALL_INCDIR_X)/$(strip $(2)))
+install_header_x = $(MKDIR) $(dir $(INSTALL_INCDIR_X)/$(strip $(2))) && $(LN) -sf $(abspath $(strip $(1)) $(INSTALL_INCDIR_X)/$(strip $(2)))
 install_header   = $(MKDIR) $(dir $(INSTALL_INCDIR_X)/$(strip $(2))) && $(LN) -sf $(SRCDIR_X)/$(strip $(1)) $(INSTALL_INCDIR_X)/$(strip $(2))
 
 install_config_header = $(call install_header, $(1), bits/$(strip $(2)))
