libc_backends: make sure no RTTI is used
This backend has been merged into libc. Make sure it does not require
any C++ runtime support.

Change-Id: Ia581b6836f51e0718beccc9dff27e833f2c8b913

--- a/libc_backends/lib/sig/Makefile
+++ b/libc_backends/lib/sig/Makefile
@@ -6,6 +6,6 @@ PC_FILENAME = libc_be_sig
 PC_LIBS     = %{-link-libc:%{shared:--whole-archive -lc_be_sig.p --no-whole-archive;:libc_be_sig.ofl}}
 PC_LIBS_PIC =
 SRC_CC      = sig.cc
-CXXFLAGS    = -fno-exceptions
+CXXFLAGS    = -DL4_NO_RTTI -fno-rtti -fno-exceptions
 
 include $(L4DIR)/mk/lib.mk
