libdl: add SONAME
Use the same version as uclibc.

Change-Id: If59e6a56efb5228abd513432159ac4679465e0f2

--- a/ldso/libdl/Makefile
+++ b/ldso/libdl/Makefile
@@ -30,6 +30,8 @@ PRIVATE_INCDIR  = $(PRIVATE_INCDIR-$(ARCH)) \
 
 TARGET := libdl.a libdl.so
 
+SOVERSION_libdl.so := 1.0.50
+
 SRC_S_libdl.a := resolve.S
 SRC_C := libdl.c #dl-iterate-phdr.c dl-support.c
 
