l4sys: require libc and libstdc++ headers
These headers are required to make use of all l4sys headers. In
particular, l4/sys/__typeinfo.h requires the <typeinfo> header. Make
sure it's around in case someone depends just on l4sys.

Fixes ticket #CD-1425.

Change-Id: I8392f00d0c093f2e8414706eb44ac2be7b14cc5a

--- a/l4sys/Control
+++ b/l4sys/Control
@@ -1,3 +1,3 @@
 provides: l4sys l4sys-l4x l4sys-direct
-requires: ldscripts compiler-rt-pure
+requires: ldscripts compiler-rt-pure libc-headers libstdc++-headers
 Maintainer: adam@os.inf.tu-dresden.de warg@os.inf.tu-dresden.de
