l4sys: introduce L4::Snd_destination
This class is used for objects to which L4::Ipc_gate or L4::Irq objects
can be bound.

L4::Thread inherits from L4::Snd_destination.

Change-Id: Ie005b7ba0dd7d3c31701bbf7b522b29c2c37d9b0

--- a/l4sys/include/Makefile
+++ b/l4sys/include/Makefile
@@ -11,6 +11,7 @@ EXTRA_TARGET	+= capability kip task factory irq icu thread vcon \
                    pager               \
                    rcv_endpoint        \
                    semaphore           \
+                   snd_destination     \
                    iommu               \
                    arm_smccc           \
                    vcpu_context        \
