[API] Default to POSIX 7th Edition instead of GNU
POSIX does not provide strdupa, so we replace it with using alloca
directly. The C library itself is still built using _GNU_SOURCE to have
all the extensions available for libraries that need/want them.

Finally use the POSIX gettimeofday signature.

Change-Id: Ia780e30adb6ba78a0f270239f5379ceb6ee0ab42

--- a/libc_backends/lib/l4re/lib/Makefile
+++ b/libc_backends/lib/l4re/lib/Makefile
@@ -11,4 +11,7 @@ SRC_C         = nanosleep.c sched_yield.c usleep.c \
                 clock_getres.c
 CFLAGS        = -ffunction-sections
 
+DEFINES_settimeofday.c += -D_DEFAULT_SOURCE
+DEFINES_usleep.c += -D_DEFAULT_SOURCE
+
 include $(L4DIR)/mk/lib.mk
