--- a/libstdc++-v3/contrib/libstdc++-v3-15/config.h.in
+++ b/libstdc++-v3/contrib/libstdc++-v3-15/config.h.in
@@ -888,6 +888,9 @@
 /* Define to restrict std::__basic_file<> to stdio APIs. */
 #undef _GLIBCXX_USE_STDIO_PURE
 
+/* Define if struct tm has a tm_zone member. */
+#undef _GLIBCXX_USE_STRUCT_TM_TM_ZONE
+
 /* Define if struct stat has timespec members. */
 #undef _GLIBCXX_USE_ST_MTIM
 
