--- a/libstdc++-v3/contrib/libstdc++-v3-15/include/Makefile.am
+++ b/libstdc++-v3/contrib/libstdc++-v3-15/include/Makefile.am
@@ -195,6 +195,7 @@ bits_headers = \
 	${bits_srcdir}/cow_string.h \
 	${bits_srcdir}/deque.tcc \
 	${bits_srcdir}/erase_if.h \
+	${bits_srcdir}/formatfwd.h \
 	${bits_srcdir}/forward_list.h \
 	${bits_srcdir}/forward_list.tcc \
 	${bits_srcdir}/fs_dir.h \
