--- a/libstdc++-v3/contrib/libstdc++-v3-15/include/Makefile.in
+++ b/libstdc++-v3/contrib/libstdc++-v3-15/include/Makefile.in
@@ -548,6 +548,7 @@ bits_freestanding = \
 @GLIBCXX_HOSTED_TRUE@	${bits_srcdir}/cow_string.h \
 @GLIBCXX_HOSTED_TRUE@	${bits_srcdir}/deque.tcc \
 @GLIBCXX_HOSTED_TRUE@	${bits_srcdir}/erase_if.h \
+@GLIBCXX_HOSTED_TRUE@	${bits_srcdir}/formatfwd.h \
 @GLIBCXX_HOSTED_TRUE@	${bits_srcdir}/forward_list.h \
 @GLIBCXX_HOSTED_TRUE@	${bits_srcdir}/forward_list.tcc \
 @GLIBCXX_HOSTED_TRUE@	${bits_srcdir}/fs_dir.h \
