ned/doc: include tutorial.lua in Doxygen documentation
Change-Id: I94fa1d18381911b7575965f3b33a70042718178f

--- a/ned/doc/files.cfg
+++ b/ned/doc/files.cfg
@@ -1,3 +1,4 @@
 INPUT += %PKGDIR%/doc/ned.dox \
+         %PKGDIR%/doc/tutorial.lua \
          %PKGDIR%/lib/include
 EXAMPLE_PATH += %PKGDIR%/server/src
