L4Re::Remote_access: Protocol for IPC-based AS and Thread access
Change-Id: Id0d76077a85d29c26f62c0df9eeb6b156588336b

--- a/l4re_itas/server/src/Makefile
+++ b/l4re_itas/server/src/Makefile
@@ -3,7 +3,7 @@ L4DIR  ?= $(PKGDIR)/../../..
 
 TARGET          = l4re
 SRC_CC         := main.cc globals.cc region.cc loader.cc \
-                  loader_elf.cc mem.cc dispatcher.cc signals.cc
+                  loader_elf.cc mem.cc dispatcher.cc signals.cc remote_access.cc
 
 SRC_S          := ARCH-$(ARCH)/sig_trampoline.S
 
