Adapt musl libc to L4Re
This changes some of the L4Re internals, such as ITAS to be more
flexible and work with both C library implementations.

It also adapts some musl internals that were too Linux specific to
easily adapt to from the outside.

The libc_backends adaptations are required because musl uses
preprocessor defines to "implement" xx64 functions, leading to aliasing
and thus double definitions if left unguarded.

Change-Id: Ie8a368eecd6e912c91dd7938de216a65529dbb4a
Co-authored-by: Georg Kotheimer <georg.kotheimer@kernkonzept.com>
Signed-off-by: Marcus Haehnel <marcus.haehnel@kernkonzept.com>

--- a/l4re_vfs/lib/src/Makefile
+++ b/l4re_vfs/lib/src/Makefile
@@ -15,3 +15,4 @@ CXXFLAGS += -fvisibility=hidden
 CXXFLAGS += -fno-exceptions -fno-rtti
 
 CPPFLAGS-$(CONFIG_L4_LIBC_UCLIBC) += -DNOT_IN_libc -include libc-symbols.h
+CPPFLAGS-$(CONFIG_L4_LIBC_MUSL)   += -D_GNU_SOURCE
