--- a/libc_backends/lib/l4re_file/Makefile
+++ b/libc_backends/lib/l4re_file/Makefile
@@ -13,3 +13,4 @@ CXXFLAGS       := -fno-rtti -fno-exceptions
 include $(L4DIR)/mk/lib.mk
 
 CPPFLAGS-$(CONFIG_L4_LIBC_UCLIBC) += -DNOT_IN_libc -include libc-symbols.h
+CPPFLAGS-$(CONFIG_L4_LIBC_MUSL)   += -D_GNU_SOURCE
