l4util: backtrace: Just have a single stub file
Change-Id: Ib9c6244e2ad624836c8dc5e2848b4e251562339c

--- a/l4util/lib/src/Makefile
+++ b/l4util/lib/src/Makefile
@@ -12,9 +12,10 @@ ALL_SRC_C_only_ppc32  = $(addprefix ARCH-ppc32/, rdtsc.c)
 ALL_SRC_C_only_sparc  = ARCH-sparc/atomics.c
 SRC_C                 = getopt2.c micros2l4to.c rand.c sleep.c \
                         base64.c kprintf.c kip.c keymap.c \
-                        ARCH-$(ARCH)/backtrace.c thread.c \
-                        $(ALL_SRC_C_only_$(ARCH)) parse_cmdline.c \
-                        list_alloc.c
+                        thread.c $(ALL_SRC_C_only_$(ARCH)) parse_cmdline.c \
+                        list_alloc.c \
+                        $(if $(wildcard $(SRC_DIR)/ARCH-$(ARCH)/backtrace.c), \
+                             ARCH-$(ARCH)/backtrace.c,backtrace_stub.c)
 CXXFLAGS              = -DL4_NO_RTTI -fno-exceptions -fno-rtti
 
 PRIVATE_INCDIR_ARCH-x86/perform.c = ARCH-x86
