libc/ldso/libdl: harmonize redundant defines and sources
Some sources were manually added for each architecture we support to the
architecture specific source list. Harmonize them to be in the global
source list.

Also, the USE_TLS define was used inconsistently between ldso, libdl and
libc. In particular libc did not specify it for riscv, while ldso and
libdl did. Also for sparc / ppc32 it seemed to be specified
inconsistently.

Synchronize the specification to simplify the buildsystem.

Change-Id: I8e8356e33b579642bfc4339a80bda5ffa590e0d8

--- a/ldso/ldso/Makefile
+++ b/ldso/ldso/Makefile
@@ -42,13 +42,7 @@ CPPFLAGS := -DNOT_IN_libc -DIS_IN_rtld \
             -D__LDSO_SEARCH_INTERP_PATH__=1 \
             -DIS_IN_rtld -D__LIBDL_SHARED__ -DSHARED
 
-DEFINES_x86-l4f   += -DUSE_TLS=1
-DEFINES_amd64-l4f += -DUSE_TLS=1
-DEFINES_arm-l4f   += -DUSE_TLS=1
-DEFINES_arm64-l4f += -DUSE_TLS=1
-DEFINES_sparc-l4f += -DUSE_TLS=1
-DEFINES_mips-l4f  += -DUSE_TLS=1
-DEFINES_riscv-l4f += -DUSE_TLS=1
+DEFINES += -DUSE_TLS=1
 
 LDFLAGS  =  -nocrt1 -Bsymbolic -Bstatic --warn-common --sort-common \
             --no-undefined -e _start -z defs -z now \
