--- a/ldso/libdl/Makefile
+++ b/ldso/libdl/Makefile
@@ -31,12 +31,7 @@ CPPFLAGS := -DNOT_IN_libc -DIS_IN_libdl \
             -include libc-symbols.h -DUCLIBC_LDSO=\"libld-l4.so.1\" \
             -DUCLIBC_RUNTIME_PREFIX=\"/\"
 
-DEFINES_x86-l4f   += -DUSE_TLS=1
-DEFINES_amd64-l4f += -DUSE_TLS=1
-DEFINES_arm-l4f   += -DUSE_TLS=1
-DEFINES_arm64-l4f += -DUSE_TLS=1
-DEFINES_mips-l4f  += -DUSE_TLS=1
-DEFINES_riscv-l4f += -DUSE_TLS=1
+DEFINES += -DUSE_TLS=1
 
 LDFLAGS = -lld-l4
 #LDFLAGS  =  -fini dl_cleanup
